<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.AudioCustomizationFragment">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enableAudioSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/enable_audio_statistics_text"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/distanceUpdateLabel"
            android:layout_height="50dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/enableAudioSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/distanceUpdateEditText"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            app:layout_constraintHorizontal_weight="0.6"
            android:text="@string/on_distance_travelled_text"
            android:visibility="gone"/>

        <EditText
            android:inputType="number"
            android:id="@+id/distanceUpdateEditText"
            android:layout_height="50dp"
            android:layout_width="0dp"
            app:layout_constraintStart_toEndOf="@id/distanceUpdateLabel"
            app:layout_constraintTop_toBottomOf="@id/enableAudioSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/audio_stat_default_text"
            android:gravity="center"
            android:importantForAutofill="no"
            app:layout_constraintHorizontal_weight="0.4"
            android:hint="@string/audio_stat_hint_text"
            android:layout_marginEnd="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/timeUpdateLabel"
            android:layout_height="50dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/distanceUpdateLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/timeUpdateEditText"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            app:layout_constraintHorizontal_weight="0.6"
            android:text="@string/on_time_passed_text"
            android:visibility="gone"/>

        <EditText
            android:inputType="number"
            android:id="@+id/timeUpdateEditText"
            android:layout_height="50dp"
            android:layout_width="0dp"
            app:layout_constraintStart_toEndOf="@id/timeUpdateLabel"
            app:layout_constraintTop_toBottomOf="@id/distanceUpdateEditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/audio_stat_default_text"
            android:gravity="center"
            android:importantForAutofill="no"
            app:layout_constraintHorizontal_weight="0.4"
            android:hint="@string/audio_stat_hint_text"
            android:layout_marginEnd="10dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/distanceTravelledCheckbox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/timeUpdateLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/distance_travelled_text"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/timePassedCheckbox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/distanceTravelledCheckbox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/time_passed_text"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/currentSpeedCheckbox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/timePassedCheckbox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/current_speed_text"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/intervalSpeedCheckbox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/currentSpeedCheckbox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/average_speed_on_current_interval_text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/saveAudioParamsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/intervalSpeedCheckbox"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/save_audio_customization_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>