<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:elevation="30dp">

        <ImageView
            android:id="@+id/conditionImageView"
            app:tint="@color/purple_500"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/condition_image_text"
            android:src="@drawable/ic_baseline_sentiment_satisfied_24"
            app:layout_constraintEnd_toStartOf="@id/dateTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/conditionImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalDistanceTexView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/totalDistanceMeasureTextView"
            app:layout_constraintEnd_toStartOf="@id/totalTimeTexView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTextView" />

        <TextView
            android:id="@+id/totalDistanceMeasureTextView"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            android:text="@string/km_text"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/totalDistanceTexView"
            app:layout_constraintStart_toStartOf="@id/totalDistanceTexView"
            app:layout_constraintTop_toBottomOf="@id/totalDistanceTexView" />

        <TextView
            android:id="@+id/averageSpeedMeasureTextView"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/km_h_text"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/averageSpeedTextView"
            app:layout_constraintStart_toStartOf="@id/averageSpeedTextView"
            app:layout_constraintTop_toBottomOf="@id/averageSpeedTextView" />

        <TextView
            android:id="@+id/totalTimeTexView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/totalTimeMeasureTextView"
            app:layout_constraintEnd_toStartOf="@id/averageSpeedTextView"
            app:layout_constraintStart_toEndOf="@id/totalDistanceTexView"
            app:layout_constraintTop_toTopOf="@id/totalDistanceTexView" />

        <TextView
            android:id="@+id/totalTimeMeasureTextView"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/minutes_text"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/totalTimeTexView"
            app:layout_constraintStart_toStartOf="@id/totalTimeTexView"
            app:layout_constraintTop_toBottomOf="@id/totalTimeTexView" />

        <TextView
            android:id="@+id/averageSpeedTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/averageSpeedMeasureTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/totalTimeTexView"
            app:layout_constraintTop_toTopOf="@id/totalDistanceTexView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>